IMTS-unstable
=============

(MudBot:)
- Completely rewritten the way lines/prompts are parsed and sent to the
  modules for processing.
(Imperian:)
- Rat/spider worth parsing is working again, also added caiman, serpents
  and locusts.
(IMapper:)
- Autolinking added, and enabled by default.
- Floating MXP map window added.
- Duplicate room detection while mapping, added.
- Merging of two identic rooms (duplicate) into one, added.
(IOffense:)
- Script block/statement parser added, that supports, in order of creation...
- C-like comments and spacing.
- Local and Global string variables.
- Functions and alias functions.
- Argument passing to functions, and return values from functions or
  statements.
- Variable assignment using a statement's return value, the assignment itself
  being a statement that can be assigned to yet another variable, etc.
- Function call stack, allowing unlimited recursive calls.
- Comparison and concatenating of variables/strings.
- Negation, and's, and or's.



IMTS-5
======

(MudBot:)
- Descriptor handling updated, to allow multiple listening ports.
- Various small changes, for compatibility with the Nexus client.
- The Editor can now make use of Composer's contents, new item added in
  its Load menu.
- To go around a Rapture bug, MCCP will be temporarily disabled when needed.
  Zmud users will now see items dropped and games played, and the Editor
  should get the Composer's contents when it's supposed to, not later.
- If Windows chokes up on too much network data, MudBot will patiently wait
  instead of simply quitting. (You can now experience the full joys
  of "room find a"!)
- Logging is started/stopped with the `log command, and no longer
  when MudBot starts.
- MXP support added.
- Renamed modules.txt to config.txt, which is now generated if not found.
- Many other insignificant bug fixes.
- Probably many other new bugs, as always.
- The same sources will compile on Linux, Darwin and Windows. Also a blank.c