@@ -21,6 +21,11 @@ High Priority
 - Use Perma Moss.
 - Alertness blank lines.
 - Telnet Neg nag.
+- room mark <vnum> +/-[flag]
+- One time keep-up.
+- landmarks type <type>
+- Single focus.
+- Test tag merging.
 
 
 
